test: make delivery source contract Java-compatible